Solved issue with property to run the test