@@ -8,11 +8,10 @@
     <artifactId>test</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <browser.name>chrome</browser.name>
-        <chrome.driver.path>/lib/drivers/chrome/chromedriver</chrome.driver.path>
+        <chrome.driver.path>lib/drivers/chrome/chromedriver.exe</chrome.driver.path>
     </properties>
 
     <repositories>
@@ -23,6 +22,7 @@
         </repository>
 
     </repositories>
+
     <build>
 
         <plugins>
@@ -35,19 +35,6 @@
                 </configuration>
             </plugin>
 
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-surefire-plugin</artifactId>-->
-<!--                <version>2.22.2</version>-->
-<!--                <configuration>-->
-<!--                    <forkCount>3</forkCount>-->
-<!--                    <reuseForks>true</reuseForks>-->
-<!--                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
-<!--                    <argLine>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5015</argLine>-->
-<!--                    <argLine>-Dfile.encoding=UTF-8</argLine>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -55,6 +42,10 @@
                 <configuration>
                     <testFailureIgnore>true</testFailureIgnore>
                     <argLine>-Dfile.encoding=UTF-8</argLine>
+                    <systemPropertyVariables>
+                        <chrome.driver.path>${chrome.driver.path}</chrome.driver.path>
+                        <browser.name>${browser.name}</browser.name>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
 
